# unilake

./: .gitignore  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  docker-compose.base.yml  docker-compose.dev.yml  sonar-project.properties  unilake.development.yaml
unilake-integration-airbyte/: Cargo.toml  dockerfile.hbs  rustfmt.toml
unilake-integration-airbyte/src/: airbyte.rs  backend.rs  docker.rs  error.rs  flatten.rs  lib.rs  main.rs  meltano.rs  model.rs  parquet.rs  schema.rs  transform.rs  utils.rs
unilake-proxy-query/: Cargo.toml  README.md  unilake-proxy-query.generated.sln
unilake-proxy-query/src/: main.rs
unilake-proxy-query/src/backend/: Cargo.toml  README.md
unilake-proxy-query/src/common/: Cargo.toml
unilake-proxy-query/src/common/src/: error.rs  lib.rs  model.rs  settings.rs
unilake-proxy-query/src/common/src/metrics/: mod.rs
unilake-proxy-query/src/endpoint/: Cargo.toml
unilake-proxy-query/src/endpoint/src/: lib.rs  main.rs
unilake-proxy-query/src/parser/: Cargo.toml
unilake-proxy-query/src/policyengine/: Cargo.toml
unilake-proxy-query/src/protocol/: Cargo.toml
unilake-proxy-query/src/protocol/src/: lib.rs  prot.rs  session.rs  tds.rs
unilake-proxy-query/src/protocol/src/backend/: caching.rs  data.rs  mod.rs  repo.rs  telemetry.rs
unilake-proxy-query/src/protocol/src/backend/app/: generic.rs  mod.rs
unilake-proxy-query/src/protocol/src/backend/starrocks/: extensions.rs  mod.rs  query.rs  session.rs
unilake-proxy-query/src/protocol/src/frontend/: codec.rs  error.rs  macros.rs  mod.rs  prot.rs  tds.rs  utils.rs
unilake-proxy-query/src/protocol/src/frontend/tds/: codec.rs  collation.rs  server_context.rs  time.rs
unilake-proxy-query/src/protocol/src/frontend/tds/codec/: attention.rs  batch_request.rs  column_data.rs  decode.rs  encode.rs  header.rs  login.rs  message.rs  pre_login.rs  response.rs  row.rs  rpc_request.rs  token.rs  tokenfactory.rs  type_info.rs
unilake-proxy-query/src/protocol/src/frontend/tds/codec/column_data/: date.rs  datetime2.rs  decimal.rs  fixed_len.rs  numeric.rs  plp.rs  sqlstring.rs  var_len.rs
unilake-proxy-query/src/protocol/src/frontend/tds/codec/token/: token_col_metadata.rs  token_done.rs  token_env_change.rs  token_error.rs  token_feature_ext_ack.rs  token_fed_auth.rs  token_info.rs  (+8 more)
unilake-proxy-query/src/protocol/src/security/: context.rs  functions.rs  handler.rs  mod.rs  model.rs  policies.rs  repository.rs  scanner.rs
unilake-proxy-query/src/protocol/src/security/adapter/: cached_adapter.rs  tsv_adapter.rs
unilake-proxy-query/src/protocol/src/security/caching/: layered_cache.rs
unilake-proxy-query/src/protocol/src/tds/: codec.rs
unilake-proxy-query/src/protocol/src/tds/codec/: batch_request.rs  header.rs  packet.rs  pre_login.rs  tokenfactory.rs
unilake-proxy-query/src/protocol/src/tds/codec/column_data/: binary.rs  bit.rs  date.rs
unilake-proxy-query/src/protocol/src/tds/codec/token/: token_done.rs  token_feature_ext_ack.rs  token_fed_auth.rs  token_order.rs  token_return_value.rs  token_type.rs
unilake-proxy-query/src/security/: Cargo.toml  abac_model.conf
unilake-proxy-query/src/security/src/: context.rs  effector.rs  functions.rs  handler.rs  lib.rs  policies.rs  repository.rs  scanner.rs
unilake-proxy-query/src/security/src/adapter/: cached_adapter.rs  mod.rs  tsv_adapter.rs
unilake-proxy-query/src/security/src/caching/: layered_cache.rs  mod.rs
unilake-proxy-query/src/server/: Cargo.toml
unilake-proxy-query/src/server/src/: main.rs
unilake-proxy-query/src/server/src/servers/: mod.rs
unilake-proxy-query/src/server/src/servers/mssql/: mod.rs  mssql_handler.rs
unilake-proxy-query/src/sql/: Cargo.toml
unilake-proxy-query/src/sql/parser/: README.md
unilake-proxy-query/src/sql/security/: Cargo.toml  README.md
unilake-proxy-query/src/sql/src/: lib.rs
unilake-proxy-query/src/sql/transpiler/: Cargo.toml
unilake-proxy-query/src/tds/: Cargo.toml
unilake-proxy-query/src/tds/src/: lib.rs  to_sql.rs
unilake-proxy-query/src/tds/src/tds/: codec.rs  collation.rs  context.rs  numeric.rs
unilake-proxy-query/src/tds/src/tds/codec/: decode.rs  encode.rs  login.rs  packet.rs  row.rs  rpc_request.rs
unilake-proxy-query/src/tds/src/tds/codec/column_data/: datetime2.rs  datetimen.rs  fixed_len.rs  float.rs  int.rs  plp.rs  string.rs  var_len.rs
unilake-proxy-query/src/tds/src/tds/codec/token/: token_col_metadata.rs  token_env_change.rs  token_error.rs  token_login_ack.rs  token_return_status.rs  token_row.rs  token_sspi.rs
unilake-proxy-query/src/wire/backend/: Cargo.toml
unilake-proxy-query/src/wire/frontend/: Cargo.toml
unilake-proxy-query/src/wire/frontend/src/: codec.rs  error.rs  lib.rs  macros.rs  prot.rs  tds.rs  to_sql.rs  utils.rs
unilake-proxy-query/src/wire/frontend/src/tds/: codec.rs  collation.rs  server_context.rs  time.rs
unilake-proxy-query/src/wire/frontend/src/tds/codec/: batch_request.rs  column_data.rs  decode.rs  encode.rs  header.rs  login.rs  message.rs  packet.rs  pre_login.rs  response.rs  token.rs  tokenfactory.rs  type_info.rs
unilake-proxy-query/tests-integration/testsuite/Unilake.ProxyQuery.TestIntegration/: Extensions.cs  Program.cs  Unilake.ProxyQuery.TestIntegration.csproj
unilake-proxy-query/tests-integration/testsuite/Unilake.ProxyQuery.TestIntegration/Features/Events/sse/: Data.cs  Endpoint.cs  Models.cs
unilake-proxy-query/tests-integration/testsuite/Unilake.ProxyQuery.TestIntegration/Features/Security/Proxy/: ProxyRouteParams.cs
unilake-proxy-query/tests-integration/testsuite/Unilake.ProxyQuery.TestIntegration/Properties/: launchSettings.json
unilake-proxy-query/tests-integration/testsuite/Unilake.ProxyQuery.TestIntegration/Shared/: BaseRouteParams.cs  Config.cs  TestData.cs
unilake-proxy-query/tests-integration/testsuite/Unilake.ProxyQuery.TestSuite/: Extensions.cs  Runner.cs  TestFile.cs  Unilake.ProxyQuery.TestSuite.csproj
unilake-proxy-query/tests-integration/testsuite/Unilake.ProxyQuery.TestSuite/StarRocks/: BenchmarkTests.cs  DataTypesTest.cs  datatypes.txt
(+1221 files in other folders)
