[package]
name = "umi"
description = "Singer protocol wrapper for unilake"
authors = ["Unilake Authors <oss@unilake.com>"]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/unilakehq/unilake"

[dependencies]
opendal = "0.25.1"
reqwest = { version = "0.11.14", features = ["json"], default-features = false }
tokio = { version = "1.26.0", features = ["full"] }
futures = "0.3.26"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
log = "0.4.17"
env_logger = "0.10.0"
handlebars = "4.3.6"
clap = { version = "4.1.8", features = [
    "derive",
    "color",
    "help",
    "usage",
    "error-context",
    "env",
] }
duct = "0.13.6"
arrow2 = { version = "0.15.0", features = [
    "io_parquet",
    "io_parquet_compression",
    "serde_types",
] }
sha1_smol = "1.0.0"
thiserror = "1.0.38"
anyhow = "1.0.69"
sys-info = "0.9.1"
chrono = "0.4.23"
async-trait = "0.1.64"

[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
