[workspace.package]
description = "Unilake query proxy"
authors = ["Unilake Authors <oss@unilake.com>"]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/unilakehq/unilake"
publish = false

[workspace]
resolver = "2"
members = [
    "src/backend",
    "src/parser",
    "src/security",
    "src/server",
    "src/protocol",
    "src/transpiler",
    "src/policyengine",
]

[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
