[workspace.package]
description = "Unilake query proxy"
authors = ["Unilake Authors <oss@unilake.com>"]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/unilakehq/unilake"
publish = false

[workspace]
resolver = "2"
members = [
    "src/backend",
    "src/parser",
    "src/security",
    "src/server",
    "src/protocol",
    "src/transpiler",
    "src/policyengine",
]

[workspace.dependencies]
# Workspace dependencies
unilake-wire-protocol = { path = "src/protocol" }
unilake-common-policyengine = { path = "src/policyengine" }
unilake-sql-parser = { path = "src/parser" }
unilake-sql-backend = { path = "src/backend" }
unilake-sql-security = { path = "src/security" }

# External
tracing = "0.1.36"
tracing-subscriber = "0.3.0"
string_enum = "0.4.4"
tokio-util = { version = "0.7.3", features = ["codec", "io"], optional = false }
tokio-rustls = { version = "0.26", optional = false, default-features = false, features = [
    "logging",
    "tls12",
] }
thiserror = "1.0.61"
enumflags2 = "0.7.5"
encoding = "0.2.33"
byteorder = "1.4.3"
uuid = "1.0"
tokio = { version = "1.20.1", features = ["full"] }

[profile.release]
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
