[workspace.package]
description = "Unilake query proxy"
authors = ["Unilake Authors <oss@unilake.com>"]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0 OR EUPL-1.2"
repository = "https://github.com/unilakehq/unilake"
publish = false

[workspace]
resolver = "2"
members = [
    "src/protocol",
    "src/common",
    "src/sql",
    "src/endpoint",
    "src/security",
]

[workspace.dependencies]
# Workspace dependencies
unilake-protocol = { path = "src/protocol" }
unilake-common = { path = "src/common" }
unilake-sql = { path = "src/sql" }
unilake-security = { path = "src/security" }

# Crates.io dependencies
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
chrono = { version = "0.4.38" }
tokio-util = { version = "0.7.11", features = [
    "codec",
    "io",
], optional = false }
tokio-rustls = { version = "0.26", optional = false, default-features = false, features = [
    "logging",
    "tls12",
] }
tokio-stream = { version = "0.1.16" }
async-stream = { version = "0.3.6" }
futures = { version = "0.3.30" }
thiserror = { version = "1.0.63" }
enumflags2 = { version = "0.7.10" }
encoding = { version = "0.2.33" }
byteorder = { version = "1.5.0" }
bigdecimal = { version = "0.4.5" }
uuid = { version = "1.10.0" }
tokio = { version = "1.41.0", features = ["full"] }
derive-new = { version = "0.7.0" }
rand = { version = "0.8.5" }
async-trait = { version = "0.1.81" }
ulid = { version = "1.1.3" }
mysql_async = { version = "0.34.2", features = [
    "minimal",
    "bigdecimal",
    "chrono",
], default-features = false }
pyo3 = { version = "0.22.3", features = ["gil-refs", "serde"] }
serde_json = { version = "1.0.129" }
serde = { version = "1.0.210", features = ["derive"] }
#casbin = { version = "2.5.0", default-features = false, features = ["runtime-tokio", "logging", "incremental", "explain"] }
casbin = { git = "https://github.com/mrhamburg/casbin-rs.git", branch = "mrhamburg-function-map", features = ["explain", "logging", "glob", "cached"] }
backon = { version = "1.2.0" }
moka = { version = "0.12.8", features = ["future"] }
redis = { version = "0.27.5", features = ["futures", "tokio", "aio", "tokio-comp"] }
base64 = { version = "0.22.1" }
rslock = { version = "0.6.0" }
reqwest = { version = "0.12.9", features = ["json"] }
config = { version = "0.14.1" }

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = 3
debug = false
codegen-units = 1
lto = true
