[package]
name = "unilake-endpoint"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
unilake-protocol = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
mysql_async = { workspace = true }
