[package]
name = "unilake-wire-protocol"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }


[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
enumflags2 = "0.7.5"
thiserror = "1.0.32"
encoding = "0.2.33"
byteorder = "1.4.3"
uuid = "1.0"
tracing = { workspace = true }
string_enum = { workspace = true }
tokio-util = { workspace = true }
tokio-rustls = { workspace = true }
