[package]
authors = [
    "Menno Hamburg <menno@alphacore.cloud>"
]
name = "tds"
version = "0.1.0"
description = "TDS Protocol Implementation"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
enumflags2 = "0.7.5"
thiserror = "1.0.32"
encoding = "0.2.33"
byteorder = "1.4.3"
tracing = "0.1.36"
uuid = "1.0"