[package]
name = "unilake-wire-frontend"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }


[dependencies]
tokio = { workspace = true }
enumflags2 = { workspace = true }
encoding = { workspace = true }
byteorder = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
string_enum = { workspace = true }
tokio-util = { workspace = true }
tokio-rustls = { workspace = true }
